--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p>Mesajın: </p>
       <textarea name="message"></textarea>
     <!-- your other form fields go here -->
-    <button type="submit">Send</button>
+    <button type="submit">Gönder</button>
   </form>
 </body>
 </html>
