--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <body style="font-family: sans-serif; padding: 20px;">
   <a href="index.html">Türkçe</a> | <a href="index-en.html">English</a>
   <h2>✉️ Bana bir mesaj bırak</h2>
-  <p>İnsanların bana email yollayabilmesi için yaptığım bir site. Eğer güvenmiyorsanız random bir email yazıp bile mesaj yollayabilirsiniz. Kimsenin bilgileriyle (emailleriyle) işim yok.</p>
+  <p>İnsanların bana email yollayabilmesi için yaptığım bir site. 
+    Eğer güvenmiyorsanız random bir email yazıp bile mesaj yollayabilirsiniz. 
+    Kimsenin bilgileriyle (emailleriyle) işim yok.</p>
   <form
     action="https://formspree.io/f/xblynnoe"
     method="POST"
